fix social-links spacing stylesheet

--- a/ui/styles.css
+++ b/ui/styles.css
@@ -12,6 +12,9 @@ body {
   font-family: "Roboto-Light", helvetica, arial, sans-serif;
   margin: -110px 0 0;
   padding: 2em; }
+  body.social-links {
+    margin: -110px 0 0;
+    padding: 2em; }
 
 a:link {
   color: blue; }
@@ -108,8 +111,13 @@ ul {
 #about {
   margin-right: 50px; }
 
+ol.social-links {
+  margin: 120px 0 0 0; }
+  ol.social-links li {
+    border-top: 2px solid grey; }
+
 .social-links {
-  margin: 120px 0 0 0;
+  margin: 0 0 0 0;
   display: block;
   overflow: hidden;
   list-style: none;
@@ -117,7 +125,6 @@ ul {
   position: relative;
   padding: 0 0 0 0; }
   .social-links li {
-    border-top: 2px solid grey;
     overflow: hidden;
     padding-top: 4px; }
     .social-links li.other-externals {
